--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="logo-icon.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./public/images/logo/logo-icon.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Care Sync Unity</title>
   </head>
