--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="./public/images/logo/logo-icon.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ABAFDB" />
     <title>Care Sync Unity</title>
   </head>
   <body>
