--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#ABAFDB" />
+    <meta
+      name="description"
+      content="All-in-one healthcare system with secure login authentication and dynamic dashboards for patients, doctors, clinics, pharmacies, and laboratories—streamlining medical workflows, record management, and care coordination."
+      data-rh="true"
+    />
     <title>Care Sync Unity</title>
   </head>
   <body>
