Proof of ownership by google

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       content="All-in-one healthcare system with secure login authentication and dynamic dashboards for patients, doctors, clinics, pharmacies, and laboratories—streamlining medical workflows, record management, and care coordination."
       data-rh="true"
     />
+    <!-- Proof of ownership by google -->
+    <meta
+      name="google-site-verification"
+      content="H1gzniop-xAm81hFjOooSqrUSAdH7r7PcRLv8lYPYww"
+    />
     <title>Care Sync Unity</title>
   </head>
   <body>
